{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 299,
  "lineage": "9144a0bd-0dcf-7c2f-86f7-77195196c8fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:793515189053:internet-gateway/igw-0e7090fec1ce3ca00",
            "id": "igw-0e7090fec1ce3ca00",
            "owner_id": "793515189053",
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            },
            "vpc_id": "vpc-02a0a550ef4d0d6d8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:793515189053:route-table/rtb-0f940f67ea69a186a",
            "id": "rtb-0f940f67ea69a186a",
            "owner_id": "793515189053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7090fec1ce3ca00",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-02a0a550ef4d0d6d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e62e363e6c7c9999",
            "route_table_id": "rtb-0f940f67ea69a186a",
            "subnet_id": "subnet-03342ac758d3e5234"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.internet-gw",
            "aws_subnet.mgmt",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:793515189053:subnet/subnet-03342ac758d3e5234",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03342ac758d3e5234",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793515189053",
            "tags": {
              "Name": "management"
            },
            "tags_all": {
              "Name": "management"
            },
            "vpc_id": "vpc-02a0a550ef4d0d6d8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-071922c3d7c1d24ee",
            "domain": "vpc",
            "id": "eipalloc-042e2b4611a9eb096",
            "network_border_group": "us-west-2",
            "network_interface": "eni-04f5cd0c655b60dc7",
            "private_dns": "ip-10-0-1-163.us-west-2.compute.internal",
            "private_ip": "10.0.1.163",
            "public_dns": "ec2-54-202-43-187.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.43.187",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "BIGIP-Managemt-PublicIp-0",
              "Prefix": "tf-aws-bigip-1nic-cc27"
            },
            "tags_all": {
              "Name": "BIGIP-Managemt-PublicIp-0",
              "Prefix": "tf-aws-bigip-1nic-cc27"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.mgmt",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.mgmt1",
            "module.bigip.random_id.module_id",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "f5_bigip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024d009a4e1aa7f28",
            "arn": "arn:aws:ec2:us-west-2:793515189053:instance/i-0ea308f13468ec9a1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea308f13468ec9a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "tf-aws-bigip-tf-demo-key-3205",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-04f5cd0c655b60dc7"
              }
            ],
            "primary_network_interface_id": "eni-04f5cd0c655b60dc7",
            "private_dns": "ip-10-0-1-163.us-west-2.compute.internal",
            "private_ip": "10.0.1.163",
            "public_dns": "ec2-54-202-43-187.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.43.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 240,
                "throughput": 0,
                "volume_id": "vol-0f25bbcdd82ee043d",
                "volume_size": 80,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03342ac758d3e5234",
            "tags": {
              "Name": "BIGIP-Instance-tf-aws-bigip-1nic-cc27",
              "Prefix": "tf-aws-bigip-1nic-cc27"
            },
            "tags_all": {
              "Name": "BIGIP-Instance-tf-aws-bigip-1nic-cc27",
              "Prefix": "tf-aws-bigip-1nic-cc27"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08b9b2aebbc5b79ae"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_subnet.mgmt",
            "module.bigip.aws_eip.mgmt",
            "module.bigip.aws_network_interface.external_private",
            "module.bigip.aws_network_interface.external_private1",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.mgmt1",
            "module.bigip.aws_network_interface.private",
            "module.bigip.aws_network_interface.private1",
            "module.bigip.aws_network_interface.public",
            "module.bigip.aws_network_interface.public1",
            "module.bigip.data.aws_ami.f5_ami",
            "module.bigip.data.aws_secretsmanager_secret_version.current",
            "module.bigip.data.template_file.user_data_vm0",
            "module.bigip.random_id.module_id",
            "module.bigip.random_string.dynamic_password",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id",
            "random_string.password",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "mgmt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-04f5cd0c655b60dc7",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:1e:65:c3:63:d5",
            "private_dns_name": "ip-10-0-1-163.us-west-2.compute.internal",
            "private_ip": "10.0.1.163",
            "private_ips": [
              "10.0.1.163"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-08b9b2aebbc5b79ae"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03342ac758d3e5234",
            "tags": {
              "Name": "BIGIP-Managemt-Interface-0",
              "Prefix": "tf-aws-bigip-1nic-cc27"
            },
            "tags_all": {
              "Name": "BIGIP-Managemt-Interface-0",
              "Prefix": "tf-aws-bigip-1nic-cc27"
            }
          },
          "dependencies": [
            "aws_subnet.mgmt",
            "module.bigip.random_id.module_id",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.mgmt-network-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:793515189053:security-group/sg-08b9b2aebbc5b79ae",
            "description": "Security group for BIG-IP Management",
            "egress": [],
            "id": "sg-08b9b2aebbc5b79ae",
            "ingress": [],
            "name": "tf-aws-bigip-mgmt-nsg-3205-20211028135430133500000002",
            "name_prefix": "tf-aws-bigip-mgmt-nsg-3205-",
            "owner_id": "793515189053",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-aws-bigip-mgmt-nsg-3205"
            },
            "tags_all": {
              "Name": "tf-aws-bigip-mgmt-nsg-3205"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a0a550ef4d0d6d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.mgmt-network-security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-976017920",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08b9b2aebbc5b79ae",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.mgmt-network-security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1683410710",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08b9b2aebbc5b79ae",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 8443,
            "id": "sgrule-3038182383",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08b9b2aebbc5b79ae",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2209911702",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08b9b2aebbc5b79ae",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:793515189053:vpc/vpc-02a0a550ef4d0d6d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b516070772246765",
            "default_route_table_id": "rtb-06f44feb9c68dff87",
            "default_security_group_id": "sg-05e1d9ede99fd5bb2",
            "dhcp_options_id": "dopt-91b207e8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02a0a550ef4d0d6d8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06f44feb9c68dff87",
            "owner_id": "793515189053",
            "tags": {
              "Environment": "dev",
              "Name": "tf-aws-bigip-vpc-3205",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-aws-bigip-vpc-3205",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "random_id.id"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}